modified tailwind utilities - added discord icon, fonts etc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "./postcss.config.ts", "./tailwind.config.ts"]
 }
